@@ -445,7 +445,7 @@ public class ITest extends RealMongoForITest {
 
         BizNameEntity bizName = BizNameEntity.newInstance(CommonUtil.generateCodeQR(mockEnvironment.getProperty("build.env")))
                 .setBusinessName("Champ")
-                .setBusinessTypes(List.of(BusinessTypeEnum.AT, BusinessTypeEnum.BA))
+                .setBusinessTypes(Arrays.asList(BusinessTypeEnum.AT, BusinessTypeEnum.BA))
                 .setPhone("9118000000000")
                 .setPhoneRaw("18000000000")
                 .setAddress("Shop NO RB.1, Haware's centurion Mall, 1st Floor, Sector No 19, Nerul - East, Seawoods, Navi Mumbai, Mumbai, 400706, India")
